--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,6 @@
 .section__container {
   max-width: var(--max-width);
   margin: auto;
-  padding: 5rem 1rem;
 }
 
 .section__header {
@@ -47,13 +46,32 @@
   border-radius: 5rem;
   cursor: pointer;
 }
+.alink{
+  padding: 1rem 1.5rem;
+  outline: none;
+  border: none;
+  font-size: 1rem;
+  color: var(--white);
+  background-color: #4220ce !important;
+  border-radius: 5rem;
+  cursor: pointer;
+  text-decoration: none;
+}
 
+.alink:hover {
+  color: var(--white);
+  background-color: var(--primary-color);
+}
 img {
   width: 100%;
   display: flex;
 }
 
 a {
+  text-decoration: none;
+}
+
+.text-decor{
   text-decoration: none;
 }
 
@@ -100,10 +118,11 @@ nav {
 .link a {
   padding: 5px;
   color: var(--text-light);
+  text-decoration: solid;
 }
 
 .link a:hover {
-  color: var(--primary-color);
+  color: #4220ce !important;
 }
 
 header {
@@ -379,7 +398,7 @@ header::before {
 
 .banner {
   padding: 5rem 0;
-  background-image: linear-gradient(to right, var(--primary-color), transparent),
+  background-image: linear-gradient(to right, #d0aec4, transparent),
     url("assets/46-banner.png");
   background-position: center center;
   background-size: cover;
@@ -398,11 +417,11 @@ header::before {
   margin-bottom: 1rem;
   font-size: 3rem;
   font-weight: 500;
-  color: var(--white);
+  color: black;
 }
 
 .banner__card p {
-  color: var(--white);
+  color: black;
 }
 
 .posts {
@@ -456,9 +475,7 @@ header::before {
 
 .photos__grid {
   margin-top: 4rem;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 2rem;
+  display: ruby-text;
 }
 
 .footer {
@@ -611,3 +628,348 @@ header::before {
     grid-template-columns: repeat(1, 1fr);
   }
 }
+
+.header__container {
+display: flex;
+width: 300%; /* 3 times the width of a single header */
+transition: transform 1.5s ease-in-out;
+}
+
+.header__content {
+flex: 1;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+text-align: center;
+padding: 20px;
+color: #fff;
+}
+
+.header__content h1 {
+font-size: 2.5rem;
+margin-bottom: 10px;
+}
+
+.header__content h2 {
+font-size: 1.5rem;
+margin-bottom: 20px;
+}
+
+.btn {
+padding: 10px 20px;
+background-color: #f164cd !important;
+color: #fff;
+border: none;
+border-radius: 5px;
+font-size: 1rem;
+cursor: pointer;
+transition: background-color 0.3s ease;
+}
+
+.btn:hover {
+background-color:#f164cd;
+}
+
+div.scroll-container header {
+  padding: 10px;
+  display: inline-block; /* Ensure images are displayed in a line */
+}
+
+div.scroll-container {
+
+  overflow: hidden; /* Change overflow to hidden */
+  white-space: nowrap;
+  padding: 10px;
+}
+
+
+.scroll-container {
+  overflow-x: auto;
+  white-space: nowrap;
+  position: relative;
+}
+
+.scroll-container::-webkit-scrollbar {
+  display: none;
+}
+
+.scroll-arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 50px;
+  height: 50px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  z-index: 1; /* Ensure buttons appear above header content */
+}
+
+.scroll-arrow-left {
+  left: 0;
+}
+
+.scroll-arrow-right {
+  right: 0;
+}
+
+
+.image-container {
+  width: 90px; /* Set your desired width */
+  height: 100px; /* Set your desired height */
+  overflow: hidden;
+  margin-right: 10px; /* Add spacing between containers */
+}
+
+
+
+
+
+/* Adjust styles for small screens */
+@media (max-width: 768px) {
+  .small_screen{
+    display: none;
+  }
+  .small_screen_image{
+    margin-left: -12% !important;
+  }
+}
+.yoga-box {
+  padding: 10px;
+  border-radius: 5px;
+  margin: 0 auto;
+  max-width: 600px;
+  text-align: justify;
+}
+
+.m-b-5{
+  margin-bottom: 5px;
+}
+
+.p-5{
+  padding: 5px;
+}
+
+.font-style-new{
+  font-family: emoji;
+  font-size: 38px !important;
+  color: #8270ce !important;
+}
+
+.font-style-new-1{
+  font-size: 18px !important;
+  margin-bottom: 30px !important;
+  font-family: math;
+}
+
+
+
+body {
+  background: #fbfbfd;
+}
+
+.new_footer_area {
+  background: #fbfbfd;
+}
+
+
+.new_footer_top {
+  padding: 120px 0px 270px;
+  position: relative;
+    overflow-x: hidden;
+}
+.new_footer_area .footer_bottom {
+  padding-top: 5px;
+  padding-bottom: 50px;
+}
+.footer_bottom {
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 20px;
+  color: #7f88a6;
+  padding: 27px 0px;
+}
+.new_footer_top .company_widget p {
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 28px;
+  color: #6a7695;
+  margin-bottom: 20px;
+}
+.new_footer_top .company_widget .f_subscribe_two .btn_get {
+  border-width: 1px;
+  margin-top: 20px;
+}
+.btn_get_two:hover {
+  background: transparent;
+  color: #5e2ced;
+}
+.btn_get:hover {
+  color: #fff;
+  background: #6754e2;
+  border-color: #6754e2;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
+  text-decoration: none;
+  outline: none;
+}
+
+
+
+.new_footer_top .f_widget.about-widget .f_list li a:hover {
+  color: #5e2ced;
+}
+.new_footer_top .f_widget.about-widget .f_list li {
+  margin-bottom: 11px;
+}
+.f_widget.about-widget .f_list li:last-child {
+  margin-bottom: 0px;
+}
+.f_widget.about-widget .f_list li {
+  margin-bottom: 15px;
+}
+.f_widget.about-widget .f_list {
+  margin-bottom: 0px;
+}
+.new_footer_top .f_social_icon a {
+  width: 44px;
+  height: 44px;
+  line-height: 43px;
+  background: transparent;
+  border: 1px solid #e2e2eb;
+  font-size: 24px;
+}
+.f_social_icon a {
+  width: 46px;
+  height: 46px;
+  border-radius: 50%;
+  font-size: 14px;
+  line-height: 45px;
+  color: #858da8;
+  display: inline-block;
+  background: #ebeef5;
+  text-align: center;
+  -webkit-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+.ti-facebook:before {
+  content: "\e741";
+}
+.ti-twitter-alt:before {
+  content: "\e74b";
+}
+.ti-vimeo-alt:before {
+  content: "\e74a";
+}
+.ti-pinterest:before {
+  content: "\e731";
+}
+
+.btn_get_two {
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  background: #5e2ced;
+  border-color: #5e2ced;
+  color: #fff;
+}
+
+.btn_get_two:hover {
+  background: transparent;
+  color: #5e2ced;
+}
+
+.new_footer_top .f_social_icon a:hover {
+  background: #5e2ced;
+  border-color: #5e2ced;
+color:white;
+}
+.new_footer_top .f_social_icon a + a {
+  margin-left: 4px;
+}
+.new_footer_top .f-title {
+  margin-bottom: 30px;
+  color: #263b5e;
+}
+.f_600 {
+  font-weight: 600;
+}
+.f_size_18 {
+  font-size: 18px;
+}
+h1, h2, h3, h4, h5, h6 {
+  color: #4b505e;
+}
+.new_footer_top .f_widget.about-widget .f_list li a {
+  color: #6a7695;
+}
+
+
+.new_footer_top .footer_bg {
+  position: absolute;
+  bottom: 0;
+  background: url("https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEigB8iI5tb8WSVBuVUGc9UjjB8O0708X7Fdic_4O1LT4CmLHoiwhanLXiRhe82yw0R7LgACQ2IhZaTY0hhmGi0gYp_Ynb49CVzfmXtYHUVKgXXpWvJ_oYT8cB4vzsnJLe3iCwuzj-w6PeYq_JaHmy_CoGoa6nw0FBo-2xLdOPvsLTh_fmYH2xhkaZ-OGQ/s16000/footer_bg.png") no-repeat scroll center 0;
+  width: 100%;
+  height: 266px;
+}
+
+.new_footer_top .footer_bg .footer_bg_one {
+  background: url("https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEia0PYPxwT5ifToyP3SNZeQWfJEWrUENYA5IXM6sN5vLwAKvaJS1pQVu8mOFFUa_ET4JuHNTFAxKURFerJYHDUWXLXl1vDofYXuij45JZelYOjEFoCOn7E6Vxu0fwV7ACPzArcno1rYuVxGB7JY6G7__e4_KZW4lTYIaHSLVaVLzklZBLZnQw047oq5-Q/s16000/volks.gif") no-repeat center center;
+  width: 330px;
+  height: 105px;
+background-size:100%;
+  position: absolute;
+  bottom: 0;
+  left: 30%;
+  -webkit-animation: myfirst 22s linear infinite;
+  animation: myfirst 22s linear infinite;
+}
+
+.new_footer_top .footer_bg .footer_bg_two {
+  background: url("https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhyLGwEUVwPK6Vi8xXMymsc-ZXVwLWyXhogZxbcXQYSY55REw_0D4VTQnsVzCrL7nsyjd0P7RVOI5NKJbQ75koZIalD8mqbMquP20fL3DxsWngKkOLOzoOf9sMuxlbyfkIBTsDw5WFUj-YJiI50yzgVjF8cZPHhEjkOP_PRTQXDHEq8AyWpBiJdN9SfQA/s16000/cyclist.gif") no-repeat center center;
+  width: 88px;
+  height: 100px;
+background-size:100%;
+  bottom: 0;
+  left: 38%;
+  position: absolute;
+  -webkit-animation: myfirst 30s linear infinite;
+  animation: myfirst 30s linear infinite;
+}
+
+
+
+@-moz-keyframes myfirst {
+0% {
+  left: -25%;
+}
+100% {
+  left: 100%;
+}
+}
+
+@-webkit-keyframes myfirst {
+0% {
+  left: -25%;
+}
+100% {
+  left: 100%;
+}
+}
+
+@keyframes myfirst {
+0% {
+  left: -25%;
+}
+100% {
+  left: 100%;
+}
+}
+
+/*************footer End*****************/
+
