--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,6 @@ body {
 }
 
 nav {
-  max-width: var(--max-width);
   margin: auto;
   padding: 2rem 1rem;
   display: flex;
@@ -980,6 +979,19 @@ background-size:100%;
   height: 90px;
 }
 
+.logo-size{
+  width: 45px;
+  height: 45px;
+}
+
+.navbar-brand.logo-size {
+  display: flex;
+  align-items: center; /* Align items vertically */
+}
+
+.navbar-brand.logo-size img {
+  margin-right: 5px; /* Adjust as needed to add space between the image and text */
+}
 .app-download {
   display: flex;
   justify-content: space-around;
