--- a/styles.css
+++ b/styles.css
@@ -278,7 +278,6 @@ header::before {
 .membership__grid {
   margin-top: 4rem;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
 }
 
@@ -490,7 +489,26 @@ header::before {
   margin-top: 4rem;
   display: ruby-text;
 }
-
+.grid_style{
+  display: flex;
+}
+/* HTML: <div class="ribbon">Your text content</div> */
+.ribbon {
+  font-size: 28px;
+  font-weight: bold;
+  color: #fff;
+}
+.ribbon {
+  --d: .8em; /* the depth */
+  
+  position: absolute;
+  top: -20px;
+  inset-inline: calc(-1*var(--d));
+  border-bottom: var(--d) solid #0008;
+  line-height: 1.8;
+  clip-path: polygon(0 0,100% 0,100% calc(100% - var(--d)),calc(100% - var(--d)) 100%,calc(100% - var(--d)) calc(100% - var(--d)),var(--d) calc(100% - var(--d)),var(--d) 100%,0 calc(100% - var(--d)));
+  background-color: #409b43 /* the main color */
+}
 .footer {
   background-color: var(--primary-color);
 }
@@ -537,6 +555,11 @@ header::before {
   color: var(--white);
   text-align: center;
 }
+@media (width < 1000px) {
+  .grid_style{
+    flex-direction: column;
+  }
+}
 
 @media (width < 900px) {
   .nav__links {
@@ -573,7 +596,6 @@ header::before {
   }
 
   .membership__grid {
-    grid-template-columns: repeat(2, 1fr);
     row-gap: 4rem;
     column-gap: 1rem;
   }
@@ -629,9 +651,6 @@ header::before {
     grid-template-columns: repeat(1, 1fr);
   }
 
-  .membership__grid {
-    grid-template-columns: repeat(1, 1fr);
-  }
 
   .stories__grid {
     grid-template-columns: repeat(1, 1fr);
